--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "io.ugommirikwe.auctions"
-        minSdkVersion 14
+        minSdkVersion 19
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -40,4 +40,12 @@ dependencies {
 
         }
     }
+    compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.0.9' // (v4.4)
+    compile 'com.joanzapata.iconify:android-iconify-entypo:2.0.9' // (v3,2015)
+    compile 'com.joanzapata.iconify:android-iconify-typicons:2.0.9' // (v2.0.7)
+    compile 'com.joanzapata.iconify:android-iconify-material:2.0.9' // (v2.0.0)
+    compile 'com.joanzapata.iconify:android-iconify-meteocons:2.0.9' // (latest)
+    compile 'com.joanzapata.iconify:android-iconify-weathericons:2.0.9' // (v2.0)
+    compile 'com.joanzapata.iconify:android-iconify-simplelineicons:2.0.9' // (v1.0.0)
+    compile 'com.joanzapata.iconify:android-iconify-ionicons:2.0.9' // (v2.0.1)
 }
